# coach-k-v2

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  ingest_library.py  pyproject.toml  requirements.txt  run.sh
.do/: app.yaml
.github/workflows/: ci.yml
app/: apns.py  config.py  db.py  gen_vapid_keys.py  main.py  migrate.py  notifications.py  plan_activate.py  plan_templates.py  scheduler.py  schemas.py
app/agent/: graph.py  prompts.py  state.py  tools.py
app/artifacts/: renderer.py
app/artifacts/templates/: base.css  program.html
app/coaching/: __init__.py  adapt.py  debrief.py  injury.py  progression.py  swaps.py  travel.py  warmup.py
app/exercises/: resolver.py
app/ingestion/: pipeline.py
app/retrieval/: embedder.py  search.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/public/images/: README.md
frontend/src/: About.tsx  App.tsx  Calendar.tsx  CoachStory.tsx  Landing.tsx  OfflineBanner.tsx  Onboarding.tsx  Progress.tsx  RestTimer.tsx  Settings.tsx  Templates.tsx  Today.tsx  api.ts  index.css  main.tsx  pwaInstall.ts  share.ts  theme.ts
frontend/src/design/: DesignChooser.tsx
ios/: README.md  project.yml
ios/CoachK/: API.swift  AppDelegate.swift  CalendarView.swift  ChatView.swift  CoachKApp.swift  FormCheckFrames.swift  HealthKitManager.swift  Info.plist  Models.swift  ProgressView.swift  SettingsView.swift  ShareSheet.swift  Theme.swift  TodayView.swift  VoiceLogger.swift
migrations/: 001_init.sql  002_chats_physique.sql  003_lbs.sql  004_today_push.sql  005_slot_index.sql  006_calendar_markers.sql  007_form_checks.sql  008_apns_devices.sql  009_repair_jsonb_strings.sql
proposals/: README.md  build_proposal.py
scripts/: fetch_exercise_media.sh  probe_durability.py
tests/: test_coaching.py  test_jsonb_helpers.py  test_memory_delta.py  test_suggest_weight.py
