[project]
name = "coach-k-v2"
version = "0.1.0"
description = "Coach K v2 — science-grounded AI strength coach (RAG over private library, evolving athlete state, branded PDFs)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Agent loop
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary]>=3.2",
    "langchain-anthropic>=0.3",
    # Ingestion (parsing + local embeddings)
    "llama-index-core>=0.12",
    "llama-parse>=0.5",
    "fastembed>=0.4",
    # Artifacts
    "jinja2>=3.1",
    "weasyprint>=63",
    # Proactive coaching (Tier 1: living plan + push)
    "pywebpush>=2.0",
    "apscheduler>=3.10",
    # iOS APNs (optional — only used when APNS_* env is set)
    "PyJWT[crypto]>=2.8",
    "httpx[http2]>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
